# myLib

./: .gitignore  CSVFile.cpp  CSVFile.hpp  FileBrowser.cpp  FileBrowser.hpp  FileOperation.cpp  FileOperation.hpp  Makefile  MathUtilities.hpp  ProgressBar.cpp  ProgressBar.hpp  WaitingBar.cpp  WaitingBar.hpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main_MathUtilities.cpp  main_csv_reader.cpp  main_demo_bar.cpp
c/: CMakeLists.txt  fifo_q.h  fifo_q_inline.h  test_fifo_q.c  test_fifo_q_100.c  test_fifo_q_inline.c
cpp/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.hpp  FileOperation.cpp  FileOperation.hpp  MathUtilities.hpp  ProgressBar.cpp  ProgressBar.hpp  TestFileOperation.cpp  WaitingBar.cpp  WaitingBar.hpp  main.cpp
example/: main_MathUtilities.cpp
include/: FileBrowser.hpp  FileOperation.hpp  MathUtilities.hpp  ProgressBar.hpp  WaitingBar.hpp
src/: FileOperation.cpp
test/: TestFileOperation.cpp
